# mdbook-readme-summary

./: Cargo.toml  README.md  test.sh
src/: main.rs
src/readme_summary/: mod.rs
