[package]
name = "mdbook-readme-summary"
description = "A mdbook Preprocessor that generates table for content for each subdirectory README files."
version = "1.1.0"
edition = "2021"
repository = "https://github.com/Antzed/mdbook-readme-summary"
license = "MIT OR Apache-2.0"
keywords = ["mdbook", "preprocessor"]
categories = ["preprocessor"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
anyhow = "1.0.71"
clap = "4.2.7"
fs = "0.0.5"
mdbook = "0.4"
pathbuf = "0.3.1"
semver = "1.0.17"
serde_json = "1.0.96"
toml = "0.7.3"
walkdir = "2.3.2"



